Allowed empty list as suffix/prefix/sublist. Changed documentation to remove notes on empty list not being considered, and added these 3 internal actions in stdlib/package.html. Fixed StdLibTest.java to include [] as possible result in backtracking.